book/tests/snapshots/snapshot__run_reference_prql@language-features__dates-and-times-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/language-features/dates-and-times-1.prql
---
SELECT
  *,
  order_time < TIME '08:30' AS should_have_shipped_today
FROM
  orders
